--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.4.1",
     "@turf/turf": "^5.1.6",
-    "events": "^3.0.0",
-    "mitt": "^1.1.3"
+    "events": "^3.0.0"
   },
   "devDependencies": {
     "jest": "^23.6.0"
