--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest test"
+    "test": "node --test-reporter ./reporter.mjs --loader tsx --test **/*.test.ts"
   },
   "dependencies": {
-    "@mapbox/mapbox-sdk": "^0.4.1",
-    "@turf/turf": "^5.1.6",
-    "events": "^3.0.0"
+    "@mapbox/mapbox-sdk": "^0.15.3",
+    "@turf/turf": "^6.5.0",
+    "events": "^3.3.0"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "@types/mapbox__mapbox-sdk": "^0.13.10",
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   }
 }
