--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "node  --loader tsx --test **/*.test.ts"
+    "test": "node --experimental-modules --loader tsx --test **/*.test.ts"
   },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
