--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "node --experimental-modules --import tsx --test **/*.test.ts",
-    "test:debug": "node --inspect-brk --experimental-modules --import tsx --test **/*.test.ts",
+    "test": "node --experimental-modules --import tsx --test ./src/lib/**/*.test.ts",
+    "test:debug": "node --inspect-brk --experimental-modules --import tsx --test ./src/lib/**/*.test.ts",
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
