--- a/package.json
+++ b/package.json
@@ -6,18 +6,38 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "node --experimental-modules --import tsx --test ./lib/**/*.test.ts",
+    "test:debug": "node --inspect-brk --experimental-modules --import tsx --test ./lib/**/*.test.ts",
+    "types:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.3",
+    "@mapbox/search-js-core": "^1.0.0-beta.18",
+    "@turf/turf": "^6.5.0",
+    "@types/lodash": "^4.14.202",
+    "events": "^3.3.0",
     "expo": "~49.0.15",
+    "expo-haptics": "~12.4.0",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.23.3",
+    "@types/mapbox__mapbox-sdk": "^0.13.10",
+    "@types/node": "^20.10.4",
     "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
