--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
     "@mapbox/search-js-core": "^1.0.0-beta.18",
+    "@rnmapbox/maps": "^10.1.3",
     "@turf/turf": "^6.5.0",
     "@types/lodash": "^4.14.202",
     "events": "^3.3.0",
@@ -23,7 +24,8 @@
     "expo-status-bar": "~1.6.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
