--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "expo-haptics": "~12.4.0",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1"
   },
   "devDependencies": {
