--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web",
     "test": "node --experimental-modules --import tsx --test ./lib/**/*.test.ts",
     "test:debug": "node --inspect-brk --experimental-modules --import tsx --test ./lib/**/*.test.ts",
-    "types:check": "tsc --noEmit"
+    "types:check": "tsc --noEmit",
+    "eas:update": "eas update && npx sentry-expo-upload-sourcemaps dist",
+    "eas:build": "eas build --profile preview platform --android"
   },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.15.3",
@@ -25,7 +27,8 @@
     "react-native": "0.72.6",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
-    "expo-dev-client": "~2.4.12"
+    "expo-dev-client": "~2.4.12",
+    "@sentry/react-native": "5.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
