--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "expo-haptics": "~12.4.0",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "expo-task-manager": "~11.3.0",
     "expo-updates": "~0.18.19",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "1.7.1",
-    "expo-task-manager": "~11.3.0"
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
